# hPyFramework

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.py  build.sh  hPyFramework.cmake  library.cmake
app/: CMakeLists.txt  main.cpp
examples/: CMakeLists.txt  pyframework.cpp
firmware/: CMakeLists.txt  build.py  main.cpp
include/: hPyFramework.h
software/hPyIDE/: FTDI.cpp  FTDI.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  SettingsDialog.cpp  SettingsDialog.h  SettingsDialog.ui  hPyIDE.pro  main.cpp  myFTDI.cpp
software/hPyIDE/Widgets/: MyConsole.cpp  MyConsole.h
software/hPyIDE/port/linux/: ftdi.c  ftdi.h  ftdi_i.h  ftdi_stream.c
src/: exports  gen.c  gen.cpp  gen.h  hPyFramework.c  hPyFramework.cpp  hPyFramework.h  hPython_int.c  info  qstrdefs
